# Concierge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  concierge_CLAUDE_plan.md  docker-compose.yml
.specify/: feature.json
admin_app/: Dockerfile  api_client.py  app.py  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin_cms.py  admin_config.py  audit_logs.py  auth.py  chat.py  cms.py  costs.py  escalations.py  health.py  leads.py  public.py  public_site.py  tenants.py  widget_asset.py  widgets.py
backend/app/core/: config.py  errors.py  logging.py  prompts.py  redaction.py  security.py  tracing.py  vault.py
backend/app/db/: base.py  rls.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_cms_chunks.py  0003_chat_persistence.py  0003_users_roles.py  0003b_chat_persistence.py  0004_cms_pages.py  0004_remaining_tables.py  0004b_post_cms_extras.py  0005_leads_admin_fields.py  0006_tenant_config.py  0006_tenant_guardrails_config.py  0007_merge_heads.py  0008_agent_config.py  0009_merge_heads.py
backend/app/models/: audit_log.py  chunk.py  cms.py  conversation.py  cost_event.py  escalation.py  guardrail_config.py  lead.py  tenant.py  tenant_config.py  user.py  widget.py
backend/app/prompts/: faq_user.md  rag_answer.md  refusal.md  system_agent.md  system_faq.md  system_sales.md
backend/app/repositories/: audit_repository.py  chunk_repository.py  cms_repository.py  conversation_repository.py  cost_repository.py  escalation_repository.py  lead_repository.py  public_site_repository.py  tenant_repository.py  widget_repository.py
backend/app/schemas/: audit_log.py  auth.py  chat.py  cms.py  common.py  escalation.py  guardrails.py  lead.py  public_site.py  tenant.py  widget.py
backend/app/services/: agent_service.py  auth_service.py  chat_orchestrator.py  chunking.py  classifier_client.py  cms_page_service.py  cms_service.py  conversation_service.py  cost_service.py  embedding_client.py  embedding_service.py  erasure_service.py  escalation_service.py  guardrail_service.py  lead_service.py  llm_client.py  memory_service.py  model_client.py  public_site_service.py  rag_service.py  rate_limit_service.py  router_service.py  tenant_service.py  widget_service.py  widget_token_service.py
backend/app/services/tools/: __init__.py  base.py  capture_lead.py  escalate.py  rag_search.py
backend/app/services/workflows/: __init__.py  base.py  faq.py  human.py  sales.py
backend/app/templates/: public_site.html
backend/scripts/: repair_tenant_configs.sql  seed_demo_data.py  seed_tenants.py
backend/tests/: conftest.py  test_agent_service.py  test_auth.py  test_chat_orchestrator.py  test_chat_route.py  test_chunking.py  test_classifier_di.py  test_cms_pages.py  test_cost_service.py  test_embedding_client.py  test_erasure_service.py  test_escalations_routes.py  test_guardrail_service.py  test_guardrails_config_schema.py  test_leads_routes.py  test_llm_client.py  test_persistence.py  test_public_site_service.py  test_public_widget_runtime.py  test_rag_service.py  test_rate_limit_service.py  test_redaction.py  test_redaction_drift.py  test_router_service.py  test_tenant_provisioning.py  test_tool_registry.py  test_tracing_baggage.py  test_tracing_chat_spans.py  test_widget_session_route.py  test_widget_token_service.py  test_workflows.py
backend/tests/integration/: conftest.py  test_outbound_headers.py  test_public_site.py  test_rag_pgvector.py  test_rls_isolation.py  test_rls_reset.py  test_service_auth.py  test_vault_source_of_truth.py
docs/: DECISIONS.md  ENGINEERING_RULES.md  EVALS.md  RUNBOOK.md  SPEC.md  SPEC_TRACING.md
evals/: eval_thresholds.yaml  prepare_golden_set.py  pyproject.toml
evals/agent/: tool_selection_golden.yaml
evals/classifier/: golden_set.json  golden_set.sha256  run_3way_eval.py
evals/rag/: evaluate_rag.py  golden_set.yaml
evals/security/: evaluate_output_leak.py  evaluate_red_team.py  output_leak_prompts.yaml  red_team_prompts.yaml
evals/tests/: test_prepare_golden_set.py  test_run_3way_eval.py
guardrails_sidecar/: .dockerignore  Dockerfile  pyproject.toml
guardrails_sidecar/app/: actions.py  main.py  schemas.py
guardrails_sidecar/app/core/: config.py  rails_engine.py  redaction.py  security.py  topic_similarity.py  vault.py
guardrails_sidecar/models/: EXPORT.md  EXPORT_SCRIPT.py  minilm_l6_v2.sha256
guardrails_sidecar/tests/: conftest.py  test_actions.py  test_rails_engine.py  test_rails_engine_output.py  test_routes.py  test_topic_similarity.py
model_server/: Dockerfile  pyproject.toml
scripts/: run_evals.sh  seed_cms.py  seed_tenants.py  seed_vault.sh  smoke_test.sh  vault-init.sh  widget_test_host.html
widget/: index.html  package.json  tsconfig.json  vite.config.ts
(+123 files in other folders)
