[project]
name = "concierge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi-users[sqlalchemy]>=13.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "python-jose[cryptography]>=3.3",
    "pgvector>=0.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
