[project]
name = "concierge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi-users[sqlalchemy]>=13.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "python-jose[cryptography]>=3.3",
    "pgvector>=0.3",
    "redis>=5.0",
    "hvac>=2.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "openinference-instrumentation-openai>=0.1.14",
    "openinference-instrumentation-groq>=0.1",
    "cohere>=5.0.0",
    "groq>=0.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "minio>=7.2",
    "jinja2>=3.1",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live PostgreSQL database (set TEST_DATABASE_URL to enable)",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
    "fakeredis>=2.35.1",
    "pytest-asyncio>=1.3.0",
]
