[project]
name = "concierge-guardrails-sidecar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "hvac>=2.3",
    "httpx>=0.27",
    # Local embedding lane (spec 010 FR-017): ONNX-only, NO torch.
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "models*"]
